actualizacion de menus

--- a/app/Resources/FOSUserBundle/translations/FOSUserBundle.es.yml
+++ b/app/Resources/FOSUserBundle/translations/FOSUserBundle.es.yml
@@ -68,7 +68,7 @@ resetting:
             Para restablecer tu contraseña - por favor visita %confirmationUrl%
 
             Atentamente,
-            el Equipo.
+            Madre Tierra.
 
 layout:
     logout: Salir
